--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.podcast.guitarwank.MainActivity">
-
-    <Button
-        android:text="playButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="0sp"
-        android:background="@drawable/play"
-        android:id="@+id/playButton" />
+    tools:context="com.podcast.guitarwank.MainActivity"
+    android:weightSum="1"
+    android:orientation="horizontal">
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -30,13 +22,31 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text=""
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_marginBottom="20dp"
-        android:layout_above="@+id/seekBar"
-        android:textColor="#F5F5DC"
+    <Button
+        android:text="playButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:textSize="0sp"
+        android:background="@drawable/play"
+        android:id="@+id/playButton"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:addStatesFromChildren="false"
+        android:keepScreenOn="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="0.5">
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="307dp"
+            android:id="@+id/linear"
+            android:layout_above="@+id/seekBar"
+            android:orientation="horizontal">
+        </ListView>
+    </LinearLayout>
 </RelativeLayout>
