--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,9 @@
         android:layout_height="match_parent"
         android:addStatesFromChildren="false"
         android:keepScreenOn="false"
+        android:weightSum="0.5"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:weightSum="0.5">
+        android:layout_alignParentStart="true">
         <ListView
             android:layout_width="fill_parent"
             android:layout_height="307dp"
